[tool.poetry]
name = "repl_python3_UniqueDaringDecagon"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
nhentai = "^0.4.16"
Flask = "^2.0.1"
Random-Word = "^1.0.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
